tests/files/parser_tests/should_fail/038.cmdr
//Should not parse weird function names
3588() {
    return 3588;
}